# django-oauth2-authentication-sample

./: .env.sample  .gitignore  README.md  manage.py  pyproject.toml
authentication/: urls.py  utils.py  views.py
core/: settings.py  urls.py  wsgi.py
demo/: apps.py  urls.py  views.py
github/: urls.py  views.py
templates/: base.html  home.html  login.html  page.html  welcome.html
