[project]
name = "django-oauth2-integration-with-oauthlib"
version = "0.1.0"
description = "A sample Django app to show how to integrate OAuth2 IDP using oauthlib and requests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "dotenv>=0.9.9",
    "oauthlib>=3.3.1",
    "requests>=2.32.4",
]
